hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics6.php.rust_elab.exp
File "tconst_on_generics6.php", line 43, characters 19-20:
Invalid argument (Typing[4326])
  File "tconst_on_generics6.php", line 10, characters 18-20:
  Expected `int`
  File "tconst_on_generics6.php", line 30, characters 86-86:
    resulting from accessing the type constant 'T'
  File "tconst_on_generics6.php", line 30, characters 47-52:
    on an object of type IntBox
  File "tconst_on_generics6.php", line 18, characters 18-23:
  But got `string`
  File "tconst_on_generics6.php", line 30, characters 86-86:
    resulting from accessing the type constant 'T'
  File "tconst_on_generics6.php", line 39, characters 12-20:
    on an object of exactly the class StringBox
File "tconst_on_generics6.php", line 43, characters 19-20:
Invalid argument (Typing[4326])
  File "tconst_on_generics6.php", line 18, characters 18-23:
  Expected `string`
  File "tconst_on_generics6.php", line 30, characters 86-86:
    resulting from accessing the type constant 'T'
  File "tconst_on_generics6.php", line 39, characters 12-20:
    on an object of exactly the class StringBox
  File "tconst_on_generics6.php", line 10, characters 18-20:
  But got `int`
  File "tconst_on_generics6.php", line 30, characters 86-86:
    resulting from accessing the type constant 'T'
  File "tconst_on_generics6.php", line 30, characters 47-52:
    on an object of type IntBox
File "tconst_on_generics6.php", line 44, characters 20-21:
Invalid argument (Typing[4326])
  File "tconst_on_generics6.php", line 10, characters 18-20:
  Expected `int`
  File "tconst_on_generics6.php", line 30, characters 86-86:
    resulting from accessing the type constant 'T'
  File "tconst_on_generics6.php", line 30, characters 47-52:
    on an object of type IntBox
  File "tconst_on_generics6.php", line 30, characters 86-86:
  But got `<expr#3>::T`
  by accessing the type constant `T`
  File "tconst_on_generics6.php", line 38, characters 26-28:
  on the expression dependent type <expr#3>
  File "tconst_on_generics6.php", line 44, characters 20-21:
    where `<expr#3>` is a reference to this expression
File "tconst_on_generics6.php", line 44, characters 20-21:
Invalid argument (Typing[4326])
  File "tconst_on_generics6.php", line 30, characters 86-86:
  Expected `<expr#3>::T`
  by accessing the type constant `T`
  File "tconst_on_generics6.php", line 38, characters 26-28:
  on the expression dependent type <expr#3>
  File "tconst_on_generics6.php", line 44, characters 20-21:
    where `<expr#3>` is a reference to this expression
  File "tconst_on_generics6.php", line 10, characters 18-20:
  But got `int`
  File "tconst_on_generics6.php", line 30, characters 86-86:
    resulting from accessing the type constant 'T'
  File "tconst_on_generics6.php", line 30, characters 47-52:
    on an object of type IntBox
